--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -8,7 +8,7 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - name Run tests
+      - name: Run tests
         run: |
           export PATH=/icarus_install:$PATH
           dart test
