--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -4,7 +4,7 @@ jobs:
   test:
     runs-on: ubuntu-latest
     container:
-      image: hub.docker.com/stevenmburns/dart-and-iverilog:latest
+      image: stevenmburns/dart-and-iverilog:latest
     steps:
       - name: Checkout
         uses: actions/checkout@v3
