--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,13 +1,10 @@
 name: sklansky
 description: A sample command-line application.
 version: 1.0.0
-# homepage: https://www.example.com
+repository: https://github.com/stevenmburns/rohd_sklansky
 
 environment:
   sdk: '>=2.18.3 <3.0.0'
-
-# dependencies:
-#   path: ^1.8.0
 
 dev_dependencies:
   lints: ^2.0.0
