--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -4,7 +4,7 @@ on:
     branches:
       - 'main'
   pull_request:
-    types: [opened, synchronized, closed]
+    types: [opened, synchronized, closed, edited]
 
 
 jobs:
